--- a/css/main.css
+++ b/css/main.css
@@ -1885,8 +1885,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  *
  * ------------------------------------------------------------------- */
 #services {
-  background-color: #19191b;
-  background-image: url(../images/services-bg.jpg);
+  background-color: #177245;
+ /* background-image: url(../images/services-bg.jpg);*/
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -1903,7 +1903,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 5, 5, 0.7);
+  background-color: #177245;
 }
 #services .gradient-overlay {
   position: absolute;
@@ -1914,7 +1914,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   /*opacity: .4;*/
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
+  background: linear-gradient(to bottom, #177245 0%, transparent 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9000000', endColorstr='#00000000',GradientType=0 );
 }
 #services .section-intro h3 {
