--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ html, body {
 
 body {
   background: #177245;
-  font-family: "librebaskerville-regular", serif;
+  font-family: "montserrat-regular", serif;
   font-size: 1.6rem;
   line-height: 3rem;
   color: #353535;
@@ -76,7 +76,7 @@ body {
  * links - (_document-setup) 
  * ------------------------------------------------------------------- */
 a, a:visited {
-  color: #07617d;
+  color: #177245;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6,
   color: #151515;
   font-style: normal;
   text-rendering: optimizeLegibility;
-  margin-bottom: 2.1rem;
+  margin-bottom: 1.5rem;
 }
 
 h3, .h03, h4, .h04 {
@@ -285,11 +285,11 @@ mark {
 }
 
 hr {
-  border: solid #d2d2d2;
-  border-width: 1px 0 0;
-  clear: both;
+  border: solid #ffffff;
+  border-width: 3px 0 0;
+  /*clear: both;
   margin: 2.4rem 0 1.5rem;
-  height: 0;
+  height: 0;*/
 }
 
 /* ------------------------------------------------------------------- 
@@ -332,7 +332,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #07617d;
+  background: #177245;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -341,7 +341,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #07617d;
+  color: #177245;
 }
 
 dd {
@@ -998,7 +998,7 @@ input::-moz-focus-inner {
   color: #252525;
 }
 .stats-tabs li a:hover {
-  color: #07617d;
+  color: #177245;
 }
 .stats-tabs li a em {
   display: block;
@@ -1134,7 +1134,7 @@ input::-moz-focus-inner {
   margin-bottom: 1.5rem;
 }
 .section-intro h1 {
-  font-family: "librebaskerville-bold", serif;
+  font-family: "montserrat-bold", serif;
   font-size: 4.8rem;
   line-height: 1.375;
   color: #151515;
@@ -1786,13 +1786,13 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   max-width: 850px;
 }
 #about span {
-  color: #07617d;
+  color: #177245;
 }
 #about h3 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
-  color: #07617d;
+  color: #177245;
   text-transform: uppercase;
   letter-spacing: .3rem;
   position: relative;
@@ -1806,11 +1806,11 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin: 0 auto 2.4rem;
 }
 #about .lead {
-  font-family: "librebaskerville-bold", serif;
+  font-family: "montserrat-regular", serif;
   font-size: 4rem;
   line-height: 1.8;
   color: #2e383f;
-  margin-top: 6rem;
+  margin-top: 0rem;
 }
 
 /* ------------------------------------------------------------------- 
@@ -1937,6 +1937,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 #services .services-list .service-item {
   margin-bottom: 3rem;
   padding: 0 50px;
+  color: #bfc7cf;
 }
 #services .services-list .service-item p {
   color: rgba(255, 255, 255, 0.5);
@@ -1952,7 +1953,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 #services .services-list .h05 {
   font-size: 1.7rem;
   line-height: 1.765;
-  color: #FFFFFF;
+  color: #177245;
   margin-bottom: 3rem;
 }
 
@@ -2035,14 +2036,14 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 #portfolio .bricks-wrapper .brick {
   float: left;
-  width: 50%;
+  width: 25%;
   padding: 0;
   margin: 0;
 }
+
 #portfolio .bricks-wrapper .brick:nth-child(2n+1) {
   clear: both;
 }
-
 /* ------------------------------------------------------------------- 
  * masonry entries - (_layout.css) 
  * ------------------------------------------------------------------- */
@@ -2272,7 +2273,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
-  color: #07617d;
+  color: #177245;
   text-transform: uppercase;
   letter-spacing: .3rem;
   position: relative;
@@ -2293,8 +2294,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   padding-bottom: 3rem;
 }
 #testimonial-slider p {
-  font-family: "Cambria", serif;
-  font-size: 3rem;
+  font-family: "montserrat-regular", serif;
+  font-size: 2rem;
   line-height: 1.8;
   color: #151515;
 }
@@ -2325,7 +2326,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  font-family: "librebaskerville-bold", sans-serif;
+  font-family: "montserrat-bold", sans-serif;
   font-size: 2rem;
   margin-top: .9rem;
   margin-bottom: 3rem;
